--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -56,7 +56,7 @@
 
 
             <div class="element">
-              <h3> <strong class="colorVWYellow"> EDUCATION</strong> </h3>
+              <h3> <strong class="colorYellowVW700"> EDUCATION</strong> </h3>
 
               <h5><strong>University of California, Berkeley </strong></h5>
               <h6 class="textItalic"> August 2015 - May 2017</h6>
@@ -121,7 +121,7 @@
 
             <div class="element">
 
-              <h3> <strong class="colorVWYellow"> SKILLS</strong> </h3>
+              <h3> <strong class="colorYellowVW700"> SKILLS</strong> </h3>
               <h5> <strong>Design & Research</strong> </h5>
               <h6>User-Centered Design</h6>
               <h6>User Research</h6>
@@ -177,7 +177,7 @@
 
           <div class="Grid-cell">
             <div class="element">
-              <h3><strong class="colorVWYellow"> EXPERIENCE</strong></h3>
+              <h3><strong class="colorYellowVW700"> EXPERIENCE</strong></h3>
               <h5><strong>BookYourPet | User Experience Designer </strong></h5>
               <h6 class="textItalic">Oct. 2021 - Feb. 2024, Full-time Contractor</h6>
               <h6 class="textItalic">Feb. 2024 - Present, Full-time</h6>
@@ -264,7 +264,7 @@
             <div class="blankHXS"></div>
 
 
-            <h3><strong class="colorVWYellow"> ARCHITECTURAL DESIGN</strong></h3>
+            <h3><strong class="colorYellowVW700"> ARCHITECTURAL DESIGN</strong></h3>
 
             <div class="element">
               <h5><strong>Buro OS | Architectural Designer </strong></h5>
