--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -158,8 +158,8 @@
             <div class="element">
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '1-2 Feature Enhancement',
-                colorBg: 'colorBgYellowVW',
-                colorTxt: 'colorWhie'
+                 colorBg: 'colorBg_VW_Pink200',
+                colorTxt: 'color_VW_Pink800'
               }) %>
               <div class="blankHTiny"></div>
 
@@ -201,8 +201,8 @@
             <div class="element">
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '1-2 Feature Enhancement',
-                colorBg: 'colorBgYellowVW',
-                colorTxt: 'colorWhie'
+                  colorBg: 'colorBg_VW_Pink200',
+                colorTxt: 'color_VW_Pink800'
               }) %>
               <div class="blankHTiny"></div>
               <h1 class="specialTextM fontWeight700">Onboarding & Subscription
@@ -214,7 +214,7 @@
               </h3>
               <ul>
 
-                <li class="listCircle">Reduced Onboarding Time: 30% decrease in the average time required to complete onboarding.
+                <li class="listCircle">Reduced Onboarding Time 30% decrease in the average time required to complete onboarding.
 
 
                 </li>
@@ -271,8 +271,8 @@
             <div class="element">
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '1-2 Feature Enhancement.',
-                colorBg: 'colorBgYellowVW',
-                colorTxt: 'colorWhie'
+                colorBg: 'colorBg_VW_Pink200',
+                colorTxt: 'color_VW_Pink800'
               }) %>
               <div class="blankHTiny"></div>
               <h1 class="specialTextM fontWeight700">Customer Booking Experience</h1>
@@ -335,8 +335,8 @@
             <div class="element">
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '1-2 Feature Enhancement.',
-                colorBg: 'colorBgYellowVW',
-                colorTxt: 'colorWhie'
+                colorBg: 'colorBg_VW_Pink200',
+                colorTxt: 'color_VW_Pink800'
               }) %>
               <div class="blankHTiny"></div>
               <h1 class="specialTextM fontWeight700">From White-Glove to Self-Service</h1>
@@ -398,8 +398,8 @@
             <div class="element">
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '0-1 Initial Launch',
-                colorBg: 'colorBgYellowVW',
-                colorTxt: 'colorWhie'
+                colorBg: 'colorBg_VW_Pink200',
+                colorTxt: 'color_VW_Pink800'
               }) %>
               <div class="blankHTiny"></div>
               <h1 class="specialTextM fontWeight700">Savings Calculator</h1>
@@ -440,12 +440,12 @@
             <div class="element">
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: 'Research, Ideation, and Wireframing',
-                colorBg: 'colorBgYellowVW',
-                colorTxt: 'colorWhie'
+                 colorBg: 'colorBg_VW_Pink200',
+                colorTxt: 'color_VW_Pink800'
               }) %>
               <div class="blankHTiny"></div>
 
-              <h1 class="specialTextM fontWeight700">LASO Local & Telehealth to RX Zero</h1>
+              <h1 class="specialTextM fontWeight700">Online Med Purchase </h1>
 
               <h3 class="colorLandingText fontWeight700">Focus on RX Zero model, moving away from RX Local and Telemedicine services
 
@@ -455,9 +455,7 @@
                 <li class="listCircle">Explore the primary challenges individuals with chronic illnesses.
                 </li>
 
-                <li class="listCircle">
-                  Determine the features and services sought by these individuals in an online medication purchase platform
-                </li>
+  
                 <li class="listCircle">
                   Understand how individuals with chronic illnesses prioritize privacy, speed, support, and information when buying medication online
                 </li>
@@ -506,8 +504,8 @@
             <div class="element">
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: '0-1 Initial Launch',
-                colorBg: 'colorBgYellowVW',
-                colorTxt: 'colorWhie'
+                colorBg: 'colorBg_VW_Pink200',
+                colorTxt: 'color_VW_Pink800'
               }) %>
               <div class="blankHTiny"></div>
 
@@ -611,8 +609,8 @@
             <div class="element">
               <%- include(`${templatePath}/shared/base_chip`, {
                 chipSmallTxt: 'Start from Scratch',
-                colorBg: 'colorBgYellowVW',
-                colorTxt: 'colorWhie'
+                colorBg: 'colorBg_VW_Pink200',
+                colorTxt: 'color_VW_Pink800'
               }) %>
               <div class="blankHTiny"></div>
 
@@ -756,7 +754,7 @@
     <div class="blankHS"></div>
 
 
-    <div class="colorBgYellowVW_light">
+    <div class="colorBgYellowVW500">
       <div class="blankHXS"></div>
 
       <div class="wrapper">
