--- a/templates/byp_b2b_booking/index.ejs
+++ b/templates/byp_b2b_booking/index.ejs
@@ -222,7 +222,7 @@
         </div>
         <div class="blankHXXS"></div>
 
-        <div class="TBcarouselNav Grid-cell">
+        <div class="TBcarouselNav Grid-cell flipBtn">
           <a class="TBsliderNav" aria-label="Go to slide 1" tabindex="0">
             <div>Clickable Calendar</div>
           </a>
