--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -48,6 +48,15 @@
               <img class="widthS" src="Wordmark_Txt.svg" alt="Wordmark">
             </div>
           </div>
+
+
+          <div class="Grid-cell">
+            <div class="element">
+
+
+              <h4>6 years of design experience, including 3 years in full-time UX design, delivering impactful solutions for B2B SaaS platforms and B2C apps.</h4>
+            </div>
+          </div>
         </div>
 
         <div class="Grid Grid--gutters Grid--1of3">
@@ -178,6 +187,8 @@
           <div class="Grid-cell">
             <div class="element">
               <h3><strong class="colorYellowVW700"> EXPERIENCE</strong></h3>
+
+
               <h5><strong>BookYourPet | User Experience Designer </strong></h5>
               <h6 class="textItalic">Oct. 2021 - Feb. 2024, Full-time Contractor</h6>
               <h6 class="textItalic">Feb. 2024 - Present, Full-time</h6>
@@ -185,31 +196,31 @@
               <div class="blankHTiny"></div>
 
               <ul>
-                <li class="listCircle">Redesigned and streamlined key workflows in the B2B web platform, including onboarding, service creation, and settings, resulting in a 79% reduction in onboarding time and an 85% increase in task completion rate.</li>
+                <li class="listCircle">Grew the B2B user base from 0 to 500+ through strategic design initiatives, contributing to overall business growth.</li>
                 <div class="blankHTiny"></div>
 
-                <li class="listCircle">Developed and implemented upsell strategies with stakeholders during the business-facing booking process, including add-ons, packages, and membership options, resulting in an average increase of $52 per transaction, a 14% increase.
+                <li class="listCircle">Streamlined workflows to reduce booking time to under 1 minute, improving user satisfaction and operational efficiency.
                 </li>
                 <div class="blankHTiny"></div>
 
-                <li class="listCircle">Led the redesign of the B2C mobile booking experience, achieving a 169% increase in booking conversions and reducing booking time by 6 minutes on avarage.
+                <li class="listCircle">Transitioned onboarding from a white-glove service to a scalable self-onboarding process, leading to increased adoption and reduced support overhead.
                 </li>
                 <div class="blankHTiny"></div>
 
-                <li class="listCircle">Adapted the B2B web platform to a minimal, efficient mobile version, ensuring key functionalities were maintained, contributing to a 35% increase in mobile app adoption.</li>
+                <li class="listCircle">Led the redesign of the B2C mobile booking experience, driving a 169% increase in booking conversions and reducing booking time by 6 minutes.</li>
 
                 <div class="blankHTiny"></div>
 
-                <li class="listCircle">Conducted comprehensive usability testing, user interviews, and competitive analysis, resulting in a 38% reduction in user errors and a 41% increase in user satisfaction scores.</li>
+                <li class="listCircle">Developed upsell strategies, increasing average transaction value by 14% through add-ons and memberships.</li>
                 <div class="blankHTiny"></div>
 
-                <li class="listCircle">Collaborated closely with stakeholders and cross-functional teams to align design initiatives with business goals, enhancing communication and project alignment.</li>
+                <li class="listCircle">Established a scalable design system, improving developer efficiency and product consistency across mobile and web platforms.</li>
                 <div class="blankHTiny"></div>
 
-                <li class="listCircle">Contributed to the development and refinement of the product roadmap using tools like Trello and Notion, leading to an improvement in project delivery times. </li>
+                <li class="listCircle">Collaborated with PMs and developers to align design initiatives with business objectives, ensuring successful execution and delivery.</li>
                 <div class="blankHTiny"></div>
 
-                <li class="listCircle">Established a robust design system and provided tailored guidance for individual deliverables, resulting in improved team productivity and faster development times.</li>
+                <li class="listCircle">Contributed to product roadmap development with tools like Trello and Notion, accelerating project delivery and enhancing cross-functional alignment.</li>
 
               </ul>
             </div>
@@ -221,18 +232,18 @@
 
 
               <ul>
-                <li class="listCircle">Designed an Admin Panel for user management, integrating advanced features based on UX research.</li>
+                <li class="listCircle">Led the 0-1 launch of the Admin Panel for user management and sales teams, collaborating closely with PMs and developers.</li>
                 <div class="blankHTiny"></div>
 
-                <li class="listCircle">Developed a cost-benefit calculator to maximize customer savings and boost subscriptions.
+                <li class="listCircle">Developed a cost-benefit calculator that boosted subscription conversions, helping customers easily understand their prescription savings.
                 </li>
                 <div class="blankHTiny"></div>
 
-                <li class="listCircle">Revitalized the design system for mobile and web applications, enhancing user experience.
+                <li class="listCircle">Revitalized the design system for mobile and web, improving clarity and ease of use for designers and developers.
                 </li>
                 <div class="blankHTiny"></div>
 
-                <li class="listCircle">Crafted responsive product pages and updated content based on user research.</li>
+                <li class="listCircle">Conducted user research and implemented a responsive system for web landing product pages.</li>
               </ul>
             </div>
             <div class="element">
@@ -254,7 +265,7 @@
               </ul>
               <div class="blankHTiny"></div>
               <ul>
-              <li class="listCircle">Utilized GitHub for version control to manage updates and iterations.</li>
+                <li class="listCircle">Utilized GitHub for version control to manage updates and iterations.</li>
               </ul>
               <div class="blankHTiny"></div>
               <ul>
