--- a/templates/byp_b2b_booking/index.ejs
+++ b/templates/byp_b2b_booking/index.ejs
@@ -12,9 +12,10 @@
   <%- include(`${templatePath}/shared/block_nav_header_back`, { 
         PageUrl:`${websitePath}/`,
         headerBackgroundColor:`colorBgBYPgrey`,
-        arrTxtColor:`BYPb2b`,
+        arrTxtColor:``,
 
         }) %>
+
 
   <%- include(`${templatePath}/shared/block_banner`, {            
         bannerTitle:'Enhancing the Business Booking Experience',
@@ -250,25 +251,25 @@
   </div>
   <!-- Case study starts -->
   <main>
-    <nav class="new_side_bar BlueBYP">
+    <nav class="new_side_bar flipBtn">
       <ul>
 
-        <li><a href="#content1" class="side_bar_content">
+        <li><a href="#content1">
             Background
           </a></li>
 
-        <li><a href="#content2" class="side_bar_content">
+        <li><a href="#content2">
             Research
           </a></li>
 
-        <li><a href="#content3" class="side_bar_content">
+        <li><a href="#content3">
             Design
           </a></li>
 
-        <li><a href="#content4" class="side_bar_content">
+        <li><a href="#content4">
             Iteration
           </a></li>
-        <li><a href="#content5" class="side_bar_content">
+        <li><a href="#content5">
             Reflection
           </a></li>
       </ul>
