--- a/templates/shared/block_banner.ejs
+++ b/templates/shared/block_banner.ejs
@@ -41,7 +41,7 @@
       <div class="blankHTiny"></div>
 
 
-      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonSmall buttonPrimary <%= bannerButtonColor %>">Slide Deck</button></a>
+      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonSmall buttonPrimary <%= bannerButtonColor %>">Open Figma slides</button></a>
     </div>
 
   </div>
@@ -58,7 +58,7 @@
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
       <div class="blankHTiny"></div>
 
-      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonSmall buttonPrimary  <%= bannerButtonColor %>">Slide Deck</button></a>
+      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonSmall buttonPrimary  <%= bannerButtonColor %>">Open Figma slides</button></a>
 
       <div class="blankHXS"></div>
     </div>
@@ -77,7 +77,7 @@
       <div class="blankHTiny"></div>
 
 
-      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonSmall buttonPrimary <%= bannerButtonColor %>">Slide Deck</button></a>
+      <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="buttonSmall buttonPrimary <%= bannerButtonColor %>">Open Figma slides</button></a>
 
       <div class="blankHXS"></div>
     </div>
