--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -455,7 +455,7 @@
                 <li class="listCircle">Explore the primary challenges individuals with chronic illnesses.
                 </li>
 
-  
+
                 <li class="listCircle">
                   Understand how individuals with chronic illnesses prioritize privacy, speed, support, and information when buying medication online
                 </li>
@@ -827,10 +827,91 @@
       <div class="blankHS"></div>
 
     </div>
-    <!-- Arrow -->
+
+
+
+
+
     <div class="blankHXS"></div>
 
+
+
+
+    <section class="timeline">
+      <ul>
+        <li>
+          <div>
+            <time>2021- present </time>
+
+            <h3 class="fontWeight400">SaaS Booking Web App</h3>
+            <h3 class="fontWeight400">Consumer Facing Mobile Booking</h3>
+
+            <br>
+
+            <h5>
+              BookYourPet
+            </h5>
+
+
+          </div>
+        </li>
+        <li>
+          <div>
+            <time>2023- 2024, Part-time </time>
+
+            <h3 class="fontWeight400">Product Designer</h3>
+            <br>
+
+            <h5>
+              LASO Health
+            </h5>
+            <h5>
+              Sell Prescription Meds
+            </h5>
+
+          </div>
+        </li>
+        <li>
+          <div>
+            <time>2023, Part-time </time>
+
+            <h3 class="fontWeight400">UX Designer</h3>
+            <br>
+
+            <h5>
+              Modernized Mobile LLC
+            </h5>
+            <h5>
+            Tablet-based admin panel for the 'Clean Spaces' app </h5>
+
+          </div>
+        </li>
+        <li>
+          <div>
+            <time>2023, Part-time </time>
+
+            <h3 class="fontWeight400">Freelancer</h3>
+            <br>
+
+            <h5>
+              VW Studio
+            </h5>
+            <h5>
+            Tablet-based admin panel for the 'Clean Spaces' app </h5>
+
+          </div>
+        </li>
+
+
+      </ul>
+    </section>
+
+    <!-- Arrow -->
+
     <%- include('shared/comp_textualElements_arrow', {message: 'My Journey' }) %>
+
+
+
     <!-- Arrow -->
     <div class="wrapper">
       <div class="Grid Grid--full Grid--gutters">
