--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -131,13 +131,13 @@
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
-              <h1 class="specialTextL fontWeight100"> Business Scheduling, Onboarding, Subscription </h1>
+              <h1 class="TextPoppins fontWeight100 Grey800"> Business Scheduling, Onboarding, Subscription </h1>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="blankHXS"></div>
+      <div class="blankHXXS"></div>
 
       <div class="wrapper">
 
@@ -245,17 +245,17 @@
         <div class="blankHS"></div>
         <hr class="wrapperM">
         <div class="blankHS"></div>
-
         <div class="wrapper">
           <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
               <div class="element">
-                <h1 class="specialTextL fontWeight100"> Mobile Consumer-Facing Booking Experience </h1>
+                <h1 class="TextPoppins fontWeight100 Grey800"> Mobile Consumer-Facing Booking Experience </h1>
               </div>
             </div>
           </div>
         </div>
-        <div class="blankHXS"></div>
+
+        <div class="blankHXXS"></div>
         <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
           <div class="Grid-cell main">
             <div class="element">
@@ -313,12 +313,12 @@
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
-              <h1 class="specialTextL fontWeight100"> Simplify SaaS Booking App </h1>
+              <h1 class="TextPoppins fontWeight100 Grey800"> Simplify SaaS Booking App </h1>
             </div>
           </div>
         </div>
       </div>
-      <div class="blankHXS"></div>
+      <div class="blankHXXS"></div>
       <div class="wrapper">
         <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
           <div class="Grid-cell main">
@@ -372,14 +372,14 @@
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
-              <h1 class="specialTextL fontWeight100"> Consumer-Facing Medication Purchase Experience
+              <h1 class="TextPoppins fontWeight100 Grey800"> Consumer-Facing Medication Purchase Experience
 
               </h1>
             </div>
           </div>
         </div>
       </div>
-      <div class="blankHXS"></div>
+      <div class="blankHXXS"></div>
       <div class="wrapper">
 
         <div class="Grid Grid--gutters Grid--holly-grail Grid--center">
@@ -481,12 +481,12 @@
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
-              <h1 class="specialTextL fontWeight100"> Healthcare Admin Panel Design </h1>
+              <h1 class="TextPoppins fontWeight100 Grey800"> Healthcare Admin Panel Design </h1>
             </div>
           </div>
         </div>
       </div>
-      <div class="blankHXS"></div>
+      <div class="blankHXXS"></div>
       <div class="wrapper">
 
         <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
